New version of documentation

--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -34,7 +34,7 @@ There are many notations for describing scenarios, e.g.
 
 This is the process where the user logs in into the application and the system verifies it.
 
-image:Login_scenario.png["Login scenario"]
+image:Purchasing_scenario.png["Login scenario"]
 
 
 === Purchasing scenario
